index page done

--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -1,3 +1,7 @@
 <navbar></navbar>
 <banner></banner>
 <plan></plan>
+<parallax></parallax>
+<advantages></advantages>
+<bottom></bottom>
+<footer></footer>
