nav compnents added

--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -1,7 +1,7 @@
-<navbar></navbar>
+<!-- <navbar></navbar> -->
 <banner></banner>
 <plan></plan>
 <parallax></parallax>
 <advantages></advantages>
-<bottom></bottom>
-<footer></footer>
+<!-- <bottom></bottom>
+<footer></footer> -->
