--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -14,23 +14,25 @@
 
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link">HOME</a>
+          <a class="nav-link" routerLink="/">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">ABOUT</a>
+          <a class="nav-link" routerLink="/about">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">PAGE</a>
+          <a class="nav-link" routerLink="/services">SERVICES</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/packages">PACKAGES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">BLOG</a>
+          <a class="nav-link">MEDIA</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">GALLERY</a>
+          <a class="nav-link" routerLink="/contacts">CONTACTS</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link">CONTACTS</a>
-        </li>
+
       </ul>
 
     </div>
