--- a/src/home/components/navbar/navbar.component.scss
+++ b/src/home/components/navbar/navbar.component.scss
@@ -10,6 +10,10 @@
   color: #000;
   padding: 10px 7px;
   border-top: 4px solid transparent;
+  & a {
+    text-decoration: none;
+    color: black;
+  }
   //   border-top: 3px solid transparent;
   &:hover {
     border-top: 4px solid #14a0f8;
