server list component added

--- a/src/home/components/advantages/advantages.component.html
+++ b/src/home/components/advantages/advantages.component.html
@@ -29,7 +29,7 @@
       </div>
       <div class="col-md-4">
         <div class="advantages-icon">
-          <i class="fa fa-cog" aria-hidden="true"></i>
+          <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
         </div>
         <div class="advantages-head">Customer satisfaction guarantee</div>
         <div class="advantages-description">
