--- a/src/home/components/plan/plan.component.html
+++ b/src/home/components/plan/plan.component.html
@@ -26,7 +26,7 @@
               <b>10</b> / mbpx</li>
             <li>
           </ul>
-          <button href="#" class="button button-1 raised">CONNECT NOW
+          <button href="#" class="button button-1 raised" (click)="navigate('/order')">CONNECT NOW
             <i class="fa fa-chevron-right mx-2"></i>
           </button>
         </div>
@@ -53,7 +53,7 @@
               <b>15</b> / mbpx</li>
             <li>
           </ul>
-          <button href="#" class="button button-1 raised">CONNECT NOW
+          <button href="#" class="button button-1 raised" (click)="navigate('/order')">CONNECT NOW
             <i class="fa fa-chevron-right mx-2"></i>
           </button>
         </div>
@@ -80,7 +80,7 @@
               <b>20</b> / mbpx</li>
             <li>
           </ul>
-          <button href="#" class="button button-1 raised">CONNECT NOW
+          <button href="#" class="button button-1 raised" (click)="navigate('/order')">CONNECT NOW
             <i class="fa fa-chevron-right mx-2"></i>
           </button>
         </div>
