--- a/src/home/containers/order/order.component.html
+++ b/src/home/containers/order/order.component.html
@@ -4,11 +4,23 @@
       <div class="col-12 order-title">
         <h2>To order a package please call us</h2>
       </div>
-
     </div>
     <div class="row ">
       <div class="col-md-4">
-        <div class="order-box"> 0192</div>
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+      </div>
+      <div class="col-md-4">
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+      </div>
+      <div class="col-md-4">
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+      </div>
+      <div class="col-md-4">
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
       </div>
     </div>
   </div>
