--- a/src/home/components/banner/banner.component.html
+++ b/src/home/components/banner/banner.component.html
@@ -6,7 +6,7 @@
       <h2>JANANI TECHNOLOGY LIMITED</h2>
       <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
         plan, offering great rates and call value.</p>
-      <button class="button button-1 raised">GET CONNECTION NOW
+      <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
       </button>
     </div>
@@ -19,7 +19,7 @@
         <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
           plan, offering great rates and call value.</p>
       </div>
-      <button class="button button-2 raised">GET CONNECTION NOW
+      <button class="button button-2 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
       </button>
     </div>
@@ -30,7 +30,7 @@
       <h2>JANANI TECHNOLOGY LIMITED</h2>
       <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
         plan, offering great rates and call value.</p>
-      <button class="button button-1 raised">GET CONNECTION NOW
+      <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
       </button>
     </div>
