responsive design front page done

--- a/src/home/components/banner/banner.component.scss
+++ b/src/home/components/banner/banner.component.scss
@@ -69,10 +69,19 @@
   .carousel-caption {
     top: 2vh;
     & h2 {
-      font-size: 24px;
+      font-size: 20px;
     }
     & p {
-      font-size: 14px;
+      display: none;
+      font-size: 12px;
+      line-height: 16px;
     }
+  }
+  .button {
+    height: 30px;
+    //   padding: 15px;
+    font-size: 10px !important;
+    padding: 5px 5px !important;
+    line-height: 18px;
   }
 }
