contact nubmer and server url updated

--- a/src/home/components/ftp-servers/ftp-servers.component.html
+++ b/src/home/components/ftp-servers/ftp-servers.component.html
@@ -5,5 +5,39 @@
         <h2>FTP-Servers </h2>
       </div>
     </div>
+    <div class="row">
+
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://172.16.50.4/" target="_blank">Janani Technology - 1</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://172.16.50.5/" target="_blank">Janani Technology - 2</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://172.16.50.41/" target="_blank">B.net</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://www.ftpbd.net/" target="_blank">ftpbd</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://172.16.50.44:8096" target="_blank">Movie live stream</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://15.1.1.1/" target="_blank">Circle Network</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://www.moviemela.live/" target="_blank">Movie mela</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://www.bdfun.club/" target="_blank">bd fun</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="https://dekhvhai.com/" target="_blank">Dekhvhai</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://plygig.com/" target="_blank">plygig</a>
+      </div>
+
+    </div>
   </div>
 </div>
