--- a/src/home/components/ftp-servers/ftp-servers.component.scss
+++ b/src/home/components/ftp-servers/ftp-servers.component.scss
@@ -14,3 +14,11 @@
     font-weight: 200;
   }
 }
+.server-link {
+  font-size: 40px;
+  border-left: 4px solid #14a0f8;
+
+  padding-left: 15px;
+  text-decoration: none;
+  color: #ed2025;
+}
