--- a/src/home/components/live-tvs/live-tvs.component.html
+++ b/src/home/components/live-tvs/live-tvs.component.html
@@ -5,5 +5,21 @@
         <h2>LIVE-TV-Servers </h2>
       </div>
     </div>
+
+    <div class="row">
+
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://www.ftpbd.net/online-tv/" target="_blank">ftpbd - Live</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="https://www.bioscopelive.com/en" target="_blank">bioscopelive</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://www.jagobd.com/" target="_blank">jagobd</a>
+      </div>
+
+    </div>
+
+
   </div>
 </div>
