--- a/src/home/components/plan/plan.component.html
+++ b/src/home/components/plan/plan.component.html
@@ -4,6 +4,7 @@
       <strong>CHOOSE</strong> YOUR PLAN
     </div>
     <div class="row">
+
       <div class="col-md-4 plan-package">
         <div class="plan-package-title">
           UNLIMITED
@@ -15,7 +16,7 @@
               <strong>2</strong>Mbit / sec</li>
             <li class="plan-package-item-price-color">
               <span>Price : </span>
-              <b>$4</b> / month</li>
+              <b> ৳700</b> / month</li>
             <li>
               <span>Traffic:
                 <span>Unlimited</span>
@@ -31,6 +32,7 @@
           </button>
         </div>
       </div>
+
       <div class="col-md-4 plan-package">
         <div class="plan-package-title">
           UNLIMITED
@@ -42,7 +44,7 @@
               <strong>6</strong>Mbit / sec</li>
             <li class="plan-package-item-price-color">
               <span>Price : </span>
-              <b>$8</b> / month</li>
+              <b> ৳1000</b> / month</li>
             <li>
               <span>Traffic:
                 <span>Unlimited</span>
@@ -69,7 +71,7 @@
               <strong>10</strong>Mbit / sec</li>
             <li class="plan-package-item-price-color">
               <span>Price : </span>
-              <b>$60</b> / month</li>
+              <b>৳1200</b> / month</li>
             <li>
               <span>Traffic:
                 <span>Unlimited</span>
