--- a/src/home/components/torrent-servers/torrent-servers.component.html
+++ b/src/home/components/torrent-servers/torrent-servers.component.html
@@ -5,5 +5,17 @@
         <h2>Torrent Servers </h2>
       </div>
     </div>
+
+    <div class="row">
+
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="https://www.crazyhd.com/" target="_blank">crazyhd</a>
+      </div>
+      <div class="col-md-6 py-4">
+        <a class="server-link" href="http://bdixtorrent.com/" target="_blank">bdixtorrent</a>
+      </div>
+
+
+    </div>
   </div>
 </div>
