--- a/src/home/containers/order/order.component.html
+++ b/src/home/containers/order/order.component.html
@@ -8,19 +8,27 @@
     <div class="row ">
       <div class="col-md-4">
         <div class="order-box">
-          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+          <i class="fa fa-phone" aria-hidden="true"></i> 01686-763706</div>
       </div>
       <div class="col-md-4">
         <div class="order-box">
-          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+          <i class="fa fa-phone" aria-hidden="true"></i> 01904-111195</div>
       </div>
       <div class="col-md-4">
         <div class="order-box">
-          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+          <i class="fa fa-phone" aria-hidden="true"></i> 01904-111196</div>
       </div>
       <div class="col-md-4">
         <div class="order-box">
-          <i class="fa fa-phone" aria-hidden="true"></i> 019212-847237</div>
+          <i class="fa fa-phone" aria-hidden="true"></i> 01904-111197</div>
+      </div>
+      <div class="col-md-4">
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 01904-111198</div>
+      </div>
+      <div class="col-md-4">
+        <div class="order-box">
+          <i class="fa fa-phone" aria-hidden="true"></i> 01904-111199</div>
       </div>
     </div>
   </div>
