--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <i class="fa fa-bars" aria-hidden="true"></i>
     </button>
     <a class="navbar-brand" href="#">
-      <img src="assets/images/logo.png">
+      <img class="logo-image" src="assets/images/logo.png">
     </a>
     <div class="collapse navbar-collapse show" id="navbarsExampleDefault" [class.show]="show">
 
