--- a/src/home/components/bottom/bottom.component.html
+++ b/src/home/components/bottom/bottom.component.html
@@ -9,7 +9,7 @@
           <i class="fa fa-map-marker" aria-hidden="true"></i> Address
         </div>
         <div class="bottom-text">
-          Ali mia membar market, Bhuigor Bus-Stand, Bhuigor, Fatullah, Narayanganj-1421
+          Ali Mia Membar Market, Bhuighar Bus-Stand, Bhuighar, Fatullah, Narayanganj-1421
         </div>
       </div>
       <div class="col-md-4">
@@ -20,7 +20,7 @@
           01686-763706; 01904-111195;
           <br> 01904-111196; 01904-111197;
           <br> 01904-111198; 01904-111199;
-          <br> 7/24 from 8:00 AM to 2:00 AM
+          <br> from 10:00 AM to 11:00 PM
         </div>
       </div>
       <div class="col-md-4">
@@ -28,7 +28,10 @@
           Follow us
         </div>
         <div class="bottom-text">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <a class="server-link" href="https://www.facebook.com/jananitechnology/" target="_blank">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </a>
+
           <i class="fa fa-twitter" aria-hidden="true"></i>
           <i class="fa fa-google-plus" aria-hidden="true"></i>
         </div>
