--- a/src/home/components/banner/banner.component.html
+++ b/src/home/components/banner/banner.component.html
@@ -4,8 +4,8 @@
     <img class="carousel-image" [src]="images[0]" alt="Random first slide">
     <div class="carousel-caption">
       <h2>JANANI TECHNOLOGY LIMITED</h2>
-      <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
-        plan, offering great rates and call value.</p>
+      <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan, offering
+        great rates and call value.</p>
       <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
       </button>
@@ -16,8 +16,8 @@
     <div class="carousel-caption">
       <div class="carousel-caption-2">
         <h2>JANANI TECHNOLOGY LIMITED</h2>
-        <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
-          plan, offering great rates and call value.</p>
+        <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan, offering
+          great rates and call value.</p>
       </div>
       <button class="button button-2 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
@@ -28,8 +28,8 @@
     <img class="carousel-image" [src]="images[2]" alt="Random third slide">
     <div class="carousel-caption">
       <h2>JANANI TECHNOLOGY LIMITED</h2>
-      <p>Looking for fast broadband without line rental fees? Look no further! We even include Netphone with every Naked DSL
-        plan, offering great rates and call value.</p>
+      <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan, offering
+        great rates and call value.</p>
       <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
       </button>
