--- a/src/home/containers/services/services.component.html
+++ b/src/home/containers/services/services.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 services-title">
-        <h2>Our services </h2>
+        <h2>Our Services </h2>
       </div>
       <div class="col-md-6"></div>
       <div class="col-md-6">
@@ -22,6 +22,31 @@
             <li>Our Professionals give solutions to Network Problems/Configuration, also solve Routing and Network Gateway Issues.</li>
           </ul>
         </div>
+      </div>
+    </div>
+
+    <div class="row my-4">
+      <div class="col-12 services-title mb-2">
+        <h2>Our Strength </h2>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <pie-chart [data]="pbar1"></pie-chart>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <pie-chart [data]="pbar2"></pie-chart>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <pie-chart [data]="pbar3"></pie-chart>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <pie-chart [data]="pbar4"></pie-chart>
+      </div>
+    </div>
+
+    <div class="row my-4">
+      <div class="col-12 services-title mb-2">
+        <h2>Exclusive Services</h2>
       </div>
     </div>
   </div>
