--- a/src/home/components/bottom/bottom.component.html
+++ b/src/home/components/bottom/bottom.component.html
@@ -1,7 +1,7 @@
 <div class="bottom">
   <div class="container">
     <div class="mx-auto" style="width: 300px;">
-      <img class="my-5" src="assets/images/logo.png">
+      <img class="bottom-logo my-5" src="assets/images/logo.png">
     </div>
     <div class="row">
       <div class="col-md-4">
