--- a/src/home/containers/services/services.component.scss
+++ b/src/home/containers/services/services.component.scss
@@ -1,17 +1,22 @@
 .services {
-    min-height: calc(100vh - 150px);
-    //   min-height: calc(100vh - 89px);
-    padding: 20px 0;
-    &-title {
-      text-align: center;
-      color: #14a0f8;
-    }
-    &-point {
-      & h4 {
-        padding: 20px 0 10px 0;
-      }
-      font-size: 14px;
-      font-weight: 200;
-    }
+  min-height: calc(100vh - 150px);
+  //   min-height: calc(100vh - 89px);
+  padding: 20px 0;
+  &-title {
+    text-align: center;
+    color: #14a0f8;
   }
-  
+  &-point {
+    & h4 {
+      padding: 20px 0 10px 0;
+    }
+    font-size: 14px;
+    font-weight: 200;
+  }
+}
+.section-header {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 40px 0 20px 0;
+  text-align: center;
+}
