--- a/src/home/components/plan/plan.component.scss
+++ b/src/home/components/plan/plan.component.scss
@@ -1,3 +1,9 @@
+// .table {
+//   font-size: 20px;
+//   &-head {
+//     color: blue;
+//   }
+// }
 .plan {
   margin: 100px 0;
   &-title {
@@ -13,6 +19,7 @@
   }
   &-package {
     text-align: center;
+    margin-bottom: 50px;
     &-title {
       border-radius: 3px 3px 0px 0px;
       padding: 8px 20px;
@@ -66,14 +73,56 @@
         &-color {
           background: #edf8fe;
           & span {
-            font-size: 25px;
+            font-size: 20px;
             color: #333333;
+            &-speed {
+              display: block;
+              font-size: 16px;
+              color: #14a0f8;
+            }
           }
           & b {
             font-size: 46px;
             font-weight: 500;
             color: #333333;
           }
+        }
+        &-color2 {
+          background: white;
+          & span {
+            display: block;
+            font-size: 16px;
+            color: #14a0f8;
+          }
+          & b {
+            font-size: 46px;
+            font-weight: 500;
+            color: #333333;
+          }
+        }
+        &-color3 {
+          background: #edf8fe;
+          & span {
+            display: block;
+            font-size: 16px;
+            color: #14a0f8;
+          }
+          & b {
+            font-size: 46px;
+            font-weight: 500;
+            color: #333333;
+          }
+        }
+        &-facebook {
+          width: 80%;
+          height: auto;
+        }
+        &-tube {
+          width: 30%;
+          height: auto;
+        }
+        &-live {
+          width: 90%;
         }
       }
     }
