--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md raised">
+<nav class="navbar navbar-expand-md fixed-top bg-light raised">
   <div class="container">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
       aria-expanded="false" aria-label="Toggle navigation" (click)="toggleCollapse()">
@@ -22,9 +22,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/services" (click)="toggleCollapse()">SERVICES</a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/packages" (click)="toggleCollapse()">PACKAGES</a>
+        <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
+          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PACKAGES</a>
+          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown02">
+            <a class="dropdown-item" routerLink="/packages" (click)="toggleCollapse()">
+              Regular </a>
+            <a class="dropdown-item" routerLink="/special-offer" (click)="toggleCollapse()">
+              Special Offer </a>
+          </div>
         </li>
         <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MEDIA</a>
@@ -39,6 +44,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contacts" (click)="toggleCollapse()">CONTACTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contacts" (click)="toggleCollapse()">Login</a>
         </li>
 
       </ul>
