--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -45,8 +45,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contacts" (click)="toggleCollapse()">CONTACTS</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contacts" (click)="toggleCollapse()">Login</a>
+        <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
+          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
+          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="http://jt.m.asthatec.net/" target="_blank" (click)="toggleCollapse()">
+              Mobile</a>
+            <a class="dropdown-item" href="http://jt.web.asthatec.net/" target="_blank" (click)="toggleCollapse()">
+              Desktop </a>
+          </div>
         </li>
 
       </ul>
