--- a/src/home/components/special-offer-card/special-offer-card.component.html
+++ b/src/home/components/special-offer-card/special-offer-card.component.html
@@ -7,6 +7,7 @@
     <div class="row pb-4">
         <div class="col-auto p-card-size">{{speed1}}</div>
         <div class="col">
+            <div class="arrow-down" [ngClass]="background"></div>
             <div class="p-card-right-1">
                 Mbps
             </div>
