--- a/src/home/components/footer/footer.component.html
+++ b/src/home/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid footer">
   <h2 class="text-center">Janani Technology Limited</h2>
-  <div class="copy-right">Developed by ©2018 Monerbari Technology Limited. All Rights Reserved </div>
+  <div class="copy-right">Developed by ©2018
+    <a href="https://www.unololtd.com" target="_blank">UNOLO Technology Limited</a>. All Rights Reserved </div>
 </div>
