--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-md fixed-top bg-light raised">
+<!-- <nav class="navbar navbar-expand-md fixed-top bg-light raised"> -->
+<nav class="navbar navbar-expand-md bg-light raised">
   <div class="container">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
       aria-expanded="false" aria-label="Toggle navigation" (click)="toggleCollapse()">
