--- a/src/home/components/banner/banner.component.scss
+++ b/src/home/components/banner/banner.component.scss
@@ -1,36 +1,44 @@
+@import "../../../assets/theme.scss";
+
 .carousel-image {
-  height: 70vh;
+  height: auto;
   width: 100%;
 }
-
 .carousel-caption {
   position: absolute;
   right: 55%;
   top: 10vh;
   left: 5%;
-  z-index: 10;
+  // z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: #fff;
   text-align: center;
+  color: $primary-text-color;
   &-2 {
     color: #14a0f8;
     & p {
       color: #888888 !important;
     }
   }
-  & h2 {
-    font-weight: 800;
-    font-family: 'Raleway', sans-serif;
-    font-size: 40px;
-  }
   & p {
-    color: #ffffff;
     font-weight: 300;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 20px;
     line-height: 34px;
   }
+}
+
+.slide-head {
+  font-size: 32px;
+  line-height: 32px;
+  font-weight: 800;
+  transition: none 0s ease 0s;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transform-origin: 50% 50% 0px;
+
+  // font-weight: 600;
+  // font-family: "Raleway", sans-serif;
+  // font-size: 30px;
 }
 
 .button {
@@ -41,7 +49,7 @@
   margin-top: 0px !important;
   padding: 15px 27px !important;
   border-radius: 3px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   line-height: 34px;
   outline: none;
