--- a/src/home/components/plan/plan.component.html
+++ b/src/home/components/plan/plan.component.html
@@ -1,326 +1,11 @@
 <div class="plan">
   <div class="container">
-    <div class="plan-title text-center">
-      <strong>CHOOSE</strong> YOUR PLAN
-    </div>
-    <div class="row">
+    <section-heding [section]="'CHOOSE'" [name]="'YOUR PLAN'"></section-heding>
 
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">1</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>3</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>1</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 10</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 40</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
+    <div class="row my-4 py-3">
+      <div class="col-md-3" *ngFor="let plan of plans">
+        <plan-box [plan]="plan"></plan-box>
       </div>
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">2</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>6</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>2</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 20</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 60</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
-      </div>
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">3</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>10</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>3</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 30</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 80</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
-      </div>
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">4</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>12</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>4</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 40</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 100</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
-      </div>
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">5</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>15</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>5</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 50</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 100</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
-      </div>
-
-      <div class="col-md-4 plan-package">
-        <div class="plan-package-title">
-          PLAN
-          <span class="plan-package-title-dropcap">6</span>
-        </div>
-        <div class="plan-package-item">
-          <ul class="plan-package-item-price">
-            <li>
-              <span>12AM - 6PM : </span>
-              <strong>20</strong>Mbps
-            </li>
-
-            <li class="plan-package-item-price-color">
-              <span>6PM - 12AM : </span>
-              <b>6</b>Mbps
-            </li>
-            <li class="plan-package-item-price-color2">
-              <span>
-                <b> 60</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-facebook" src="assets/images/facebook.png">
-              </span>
-
-            </li>
-
-            <li class="plan-package-item-price-color3">
-              <span>
-                <b> 100</b>Mbps</span>
-              <span>
-                <img class="plan-package-item-price-tube" src="assets/images/youtube.png">
-                <img class="plan-package-item-price-tube" src="assets/images/bdix.png">
-                <img class="plan-package-item-price-tube" src="assets/images/ftp.png">
-              </span>
-
-            </li>
-            <li>
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livestream.png">
-              </span>
-            </li>
-            <li class="plan-package-item-price-color3">
-              <span>
-                <img class="plan-package-item-price-live" src="assets/images/livetv.png">
-              </span>
-            </li>
-            <li></li>
-          </ul>
-          <button href="#" class="button button-1 raised mt-4" (click)="navigate('/order')">CONNECT NOW
-            <i class="fa fa-chevron-right mx-2"></i>
-          </button>
-        </div>
-      </div>
-
-
-
     </div>
   </div>
 </div>
