--- a/src/home/components/parallax/parallax.component.html
+++ b/src/home/components/parallax/parallax.component.html
@@ -1,13 +1,34 @@
 <div class="parallax">
   <div class="container">
-    <div class="parallax-title">
-      RELIABLE AND FAST
+    <div class="row">
+      <div class="row col-md-6">
+        <div class="intro">
+          <div class="title">Fast Download &amp; Upload<br>Speeds at an Affordable Price</div>
+          <div class="description">
+            <p>When choosing among the best high speed Internet providers, there are<br>several other factors that
+              should be taken into consideration besides just the available download speeds.</p>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida as nibh vel velit auctor aliquet. Aenean
+              sollicitudin, lorem quis a bibenum auctor, nisi elit consequat ipsum, nec sagittis sem is nibh id elit.
+            </p>
+          </div>
+        </div>
+        <div class="contact-info ">
+          <div class="media">
+            <div class="media-body">
+              <div class="phone"><span>(+88)</span> 01686-763706<br>
+                <span>(+88)</span> 01904-111196
+              </div>
+            </div>
+          </div>
+          <div class="media">
+            <div class="media-body">
+              Ali Mia Membar Market<br>
+              Bhuighar Bus-Stand<br>
+              Bhuighar, Fatullah, Narayanganj-1421 <br> </div>
+          </div>
+        </div>
+      </div>
+      <div class="row col-md-6"></div>
     </div>
-    <div class="parallax-text">
-      INTERNET SERVICES
-    </div>
-  </div>
-  <div class="mx-auto" style="width: 200px;">
-    <button class="button-read-more raised">READ MORE</button>
   </div>
 </div>
