--- a/src/home/components/parallax/parallax.component.scss
+++ b/src/home/components/parallax/parallax.component.scss
@@ -1,44 +1,100 @@
 .parallax {
-  position: relative;
-  overflow: hidden;
-  color: white;
-  padding-bottom: 6%;
-  padding-top: 6%;
-  background-image: url(/assets/images/parallax.jpg);
-  background-repeat: no-repeat;
-  // background-size: 100%;
-  background-position: 30% 50%;
-
-  &-title {
-    text-align: center;
-    font-size: 80px;
-    font-weight: 800;
-    line-height: 80px;
-    margin-bottom: 20px;
-  }
-
-  &-text {
-    text-align: center;
-    font-size: 60px;
-    font-weight: 200;
-    line-height: 64px;
-    margin-bottom: 20px;
-  }
+  background: transparent url(/assets/images/intro-bg.jpg) 0% 0% / auto repeat
+    scroll;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  padding: 29px 0 50px;
 }
 
-.button-read-more {
-  cursor: pointer;
-  height: 64px;
-  //   padding: 15px;
-  font-size: 19px !important;
-  margin-top: 0px !important;
-  padding: 15px 27px !important;
-  border-radius: 3px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  line-height: 34px;
-  outline: none;
-  border: 1px solid #14a0f8;
-  color: white;
-  background: #14a0f8;
+.intro .title {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.24s ease-in-out;
+  -moz-transition: opacity 0.24s ease-in-out;
+  transition: opacity 0.24s ease-in-out;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.4;
 }
+
+.intro .description {
+  color: #999999;
+  line-height: 1.6;
+  padding: 29px 0 50px;
+}
+
+.contact-info {
+  line-height: 1.6;
+  font-family: "Lato", sans-serif;
+  color: #999999;
+}
+.contact-info .media {
+  display: inline-block;
+  border-right: 1px dashed #636363;
+  padding-right: 20px;
+  margin-right: 20px;
+}
+.contact-info .media:last-child {
+  border-right: none;
+  padding-right: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+}
+.contact-info .phone {
+  font-size: 22px;
+  font-weight: 300;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.contact-info .phone span {
+  color: #999999;
+}
+.media-body {
+  display: table-cell;
+  vertical-align: top;
+}
+
+// .parallax {
+//   position: relative;
+//   overflow: hidden;
+//   color: white;
+//   padding-bottom: 6%;
+//   padding-top: 6%;
+//   background-image: url(/assets/images/intro-bg.jpg);
+//   background-repeat: no-repeat;
+//   // background-size: 100%;
+//   background-position: 30% 50%;
+
+//   &-title {
+//     text-align: center;
+//     font-size: 80px;
+//     font-weight: 800;
+//     line-height: 80px;
+//     margin-bottom: 20px;
+//   }
+
+//   &-text {
+//     text-align: center;
+//     font-size: 60px;
+//     font-weight: 200;
+//     line-height: 64px;
+//     margin-bottom: 20px;
+//   }
+// }
+
+// .button-read-more {
+//   cursor: pointer;
+//   height: 64px;
+//   //   padding: 15px;
+//   font-size: 19px !important;
+//   margin-top: 0px !important;
+//   padding: 15px 27px !important;
+//   border-radius: 3px;
+//   font-family: 'Raleway', sans-serif;
+//   font-weight: 800;
+//   line-height: 34px;
+//   outline: none;
+//   border: 1px solid #14a0f8;
+//   color: white;
+//   background: #14a0f8;
+// }
